--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         :root {
             --primary-color: #1A5276;
             --secondary-color: #4db6ac;
-            --accent-color: #ff9800;
+            --accent-color: #e6dcce;
             --text-dark: #333;
-            --text-light: #fff;
+            --text-light: #ffffff;
             --bg-light: #f7f9fb;
             --bg-section-1: linear-gradient(135deg, #e0f7fa, #84cff1);
             --bg-section-2: linear-gradient(135deg, #78b4f5, #f4f7f9);
@@ -143,7 +143,7 @@
         }
 
         .hero-text .btn:hover {
-            background: #e68900;
+            background: #8ed9ec;
             transform: translateY(-2px);
         }
 
@@ -507,6 +507,18 @@
                         <p class="mb-1"><strong>Email:</strong> <a href="mailto:socialmedia@s3solution.co.in">socialmedia@s3solution.co.in</a></p>
                         <p class="mb-1"><strong>Phone:</strong> +91 7859826134, 7217811694</p>
                         <p class="mb-0"><strong>Address:</strong> SHOP NO.- 1, A2/7/31, PHASE 5, NEAR KAALI MANDIR, AYA NAGAR, NEW DELHI 110047</p>
+                        <!-- 🌍 Embedded Google Map -->
+                        <div class="mt-3">
+                        <iframe
+                            width="100%"
+                            height="250"
+                            style="border:0; border-radius:8px;"
+                            loading="lazy"
+                            allowfullscreen
+                            referrerpolicy="no-referrer-when-downgrade"
+                            src="https://maps.google.com/maps?q=28.4733913,77.1242775&z=17&output=embed">
+                        </iframe>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-7">
