--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         }
 
         .hero-text .btn:hover {
-            background: #8ed9ec;
+            background: #1160a9;
             transform: translateY(-2px);
         }
 
@@ -522,22 +522,20 @@
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <form id="contactForm" class="bg-light p-4 rounded shadow" action="https://formsubmit.co/socialmedia@s3solution.co.in" method="POST">
-                        <div class="mb-3">
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" name="name" id="name" class="form-control" placeholder="Your name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" name="email" id="email" class="form-control" placeholder="Your email" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="message" class="form-label">Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Your message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Send Message</button>
-                    </form>
+                    <div class="bg-light p-4 rounded shadow">
+                        <iframe 
+                            src="https://docs.google.com/forms/d/e/1FAIpQLSd1x1nti7PVnf7-ccYZeac4XD-Z9WjDQ3rUafrt9JXfSeHLaA/viewform?usp=header" 
+                            width="100%" 
+                            height="650" 
+                            frameborder="0" 
+                            marginheight="0" 
+                            marginwidth="0"
+                            style="border-radius:8px;">
+                            Loading…
+                        </iframe>
+                    </div>
                 </div>
+
             </div>
         </div>
     </section>
